--- a/trueface-sdk/package.json
+++ b/trueface-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trueface-sdk",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Trueface Typescript SDK",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -60,8 +60,8 @@
       "src/**/*.ts"
     ],
     "coveragePathIgnorePatterns": [
-      "\/__tests__\/",
-      "\/node_modules\/"
+      "/__tests__/",
+      "/node_modules/"
     ],
     "testEnvironment": "node",
     "testRegex": "__tests__/.*\\.spec\\.ts$",
