--- a/trueface-react/package.json
+++ b/trueface-react/package.json
@@ -38,8 +38,8 @@
   },
   "homepage": "https://github.com/getchui/Trueface.ai_SDK",
   "devDependencies": {
-    "react-addons-test-utils": "^15.4.2",
-    "react-scripts-ts": "1.0.6",
+    "react-addons-test-utils": "^15.6.2",
+    "react-scripts-ts": "2.8.0",
     "@types/jest": "^20.0.7",
     "@types/node": "^8.0.24",
     "browserify": "^14.4.0",
@@ -47,19 +47,20 @@
     "dts-bundle": "^0.7.3",
     "jest": "^20.0.4",
     "standard-version": "^4.2.0",
-    "ts-jest": "^20.0.10",
-    "ts-loader": "^2.3.3",
-    "tslint": "^5.6.0",
+    "ts-jest": "^21.1.3",
+    "ts-loader": "^3.0.2",
+    "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
-    "typescript": "2.4.2",
-    "webpack": "3.5.5",
+    "postcss-loader": "2.0.8",
+    "typescript": "2.5.3",
+    "webpack": "3.8.1",
     "webpack-node-externals": "^1.6.0",
     "@types/enzyme": "^2.7.2",
-    "@types/react": "15.0.14",
-    "@types/react-dom": "^0.14.22",
+    "@types/react": "16.0.13",
+    "@types/react-dom": "^16.0.1",
     "enzyme": "^2.7.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "dependencies": {},
   "jest": {
