--- a/trueface-react/tsconfig.json
+++ b/trueface-react/tsconfig.json
@@ -5,6 +5,7 @@
       "es2017",
       "dom"
     ],
+    "jsx": "react",
     "module": "commonjs",
     "target": "es5",
     "moduleResolution": "node",
@@ -13,6 +14,16 @@
     "declaration": true,
     "outDir": "dist",
     "removeComments": false,
+
+    "rootDir": "src",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -21,7 +32,7 @@
     ]
   },
   "files": [
-    "src/index.ts"
+    "src/index.tsx"
   ],
   "exclude": [
     "node_modules"
