--- a/trueface-react/package.json
+++ b/trueface-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trueface-react",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Trueface React Components",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -52,6 +52,8 @@
     "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
     "postcss-loader": "2.0.8",
+    "style-loader": "0.19.0",
+    "css-loader": "0.28.7",
     "typescript": "2.5.3",
     "webpack": "3.8.1",
     "webpack-node-externals": "^1.6.0",
