--- a/trueface-sdk/package.json
+++ b/trueface-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trueface-sdk",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Trueface Typescript SDK",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -46,6 +46,8 @@
     "ts-loader": "^3.0.2",
     "tslint": "^5.6.0",
     "tslint-loader": "^3.5.3",
+    "typedoc": "^0.9.0",
+    "typedoc-webpack-plugin": "^1.1.4",
     "typescript": "2.5.3",
     "webpack": "3.8.1",
     "webpack-node-externals": "^1.6.0"
