--- a/trueface-react/package.json
+++ b/trueface-react/package.json
@@ -62,7 +62,9 @@
     "@types/react-dom": "^16.0.1",
     "enzyme": "^3.1.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "typedoc": "^0.9.0",
+    "typedoc-webpack-plugin": "^1.1.4"
   },
   "dependencies": {},
   "jest": {
