--- a/trueface-sdk-android/app/build.gradle
+++ b/trueface-sdk-android/app/build.gradle
@@ -21,12 +21,12 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:design:27.+'
+    implementation 'com.android.support:design:27.0.2'
+    compile 'com.github.kbiakov:CodeView-android:1.3.1'
     compile project(":sdk")
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
