--- a/trueface-sdk-android/app/src/main/AndroidManifest.xml
+++ b/trueface-sdk-android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ai.trueface.demo">
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
 
     <application
@@ -21,9 +22,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".FaceDetectionActivity"
-            android:label="@string/title_activity_face_detection"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:label="@string/title_activity_face_detection" />
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".SpoofDetectionActivity"
+            android:label="@string/title_activity_spoof_detection" />
     </application>
 
 </manifest>
