--- a/trueface-sdk-android/app/build.gradle
+++ b/trueface-sdk-android/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
 dependencies {
     implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.kbiakov:CodeView-android:1.3.1'
     compile project(":sdk")
     implementation fileTree(dir: 'libs', include: ['*.jar'])
