--- a/trueface-sdk-android/app/src/main/AndroidManifest.xml
+++ b/trueface-sdk-android/app/src/main/AndroidManifest.xml
@@ -22,13 +22,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name=".FaceDetectionActivity"
-            android:label="@string/title_activity_face_detection" />
+            android:label="@string/title_activity_face_detection"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".SpoofDetectionActivity"
-            android:label="@string/title_activity_spoof_detection" />
+            android:label="@string/title_activity_spoof_detection"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".EnrollActivity"
+            android:label="@string/title_activity_enroll"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
