--- a/trueface-sdk-android/sdk/build.gradle
+++ b/trueface-sdk-android/sdk/build.gradle
@@ -2,9 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+/*
 androidExtensions {
     experimental = true
 }
+*/
 
 android {
     compileSdkVersion 27
@@ -31,27 +33,30 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19.1'
+    // compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19.1'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
-    compile 'com.github.kittinunf.fuel:fuel-rxjava:1.11.0'
-    compile 'com.github.kittinunf.fuel:fuel-gson:1.11.0'
+    // compile 'com.github.kittinunf.fuel:fuel-rxjava:1.11.0'
+    // compile 'com.github.kittinunf.fuel:fuel-gson:1.11.0'
 }
 repositories {
     mavenCentral()
 }
 
 apply plugin: 'kotlin-android-extensions'
+/*
 kotlin {
     experimental {
         coroutines "enable"
     }
 }
+*/
