--- a/trueface-sdk-android/sdk/build.gradle
+++ b/trueface-sdk-android/sdk/build.gradle
@@ -8,6 +8,19 @@ androidExtensions {
 }
 */
 
+task deleteJar(type: Delete) {
+    delete 'libs/logmanagementlib.jar'
+}
+
+task createJar(type: Copy) {
+    from('build/intermediates/bundles/release/')
+    into('libs/jars/')
+    include('classes.jar')
+    rename('classes.jar', 'trueface-sdk.jar')
+}
+
+createJar.dependsOn(deleteJar, build)
+
 android {
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
